--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
             "email": "andraz.pavlic@edsolution.si"
         }
     ],
+    "minimum-stability": "stable",
     "require": {
         "php": "^5.3.2 || ^7.0",
         "contao/core-bundle": "^3.5.1 || ^4.1",
