--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         }
     ],
     "require": {
-        "php": "^5.3.2 || ^7.0",
-        "contao/core-bundle": "^3.5.1 || ^4.1",
-        "contao-community-alliance/composer-plugin": "^2.4.0 || 3.*"
+        "php": ">=5.3",
+        "contao/core-bundle": "~3.0 || ~4.0",
+        "contao-community-alliance/composer-plugin": "~2.4 || ~3.0"
     },
     "extra": {
         "contao": {
             "sources": {
-                "": "system/modules/edsolution-article-container-class"
+                "src": "system/modules/edsolution-article-container-class"
             }
         }
     }
